    'dpkg-divert --list' and perform an md5sum check on the diverted
    files.  (Closes: #601394)
  * modified updatedb to use output of 'dpkg-divert --list \*'
  * cron.daily only runs /usr/sbin/update-dlocatedb if it exists and is
    executable (Closes: #829473)
  * got tired of forgetting to update the VERSION_BANNER in dlocate,
    so made it use $(dpkg-query -W -f '${version}' dlocate)

 -- Craig Sanders <cas@taz.net.au>  Sun, 03 Jul 2016 03:46:36 +1000

dlocate (1.07) unstable; urgency=medium

  * updated VERSION_BANNER
  * (Closes: #532061,  #407412, #532704, #563595, #567080, #614664, #733864, #788661, #567080)

 -- Craig Sanders <cas@taz.net.au>  Tue, 21 Jun 2016 13:33:28 +1000

dlocate (1.06) unstable; urgency=medium

  * added util-linux to dependencies

 -- Craig Sanders <cas@taz.net.au>  Tue, 21 Jun 2016 11:48:29 +1000

dlocate (1.05) unstable; urgency=low

  * completely rewrote option parsing, now uses getopt from util-linux
    long options now use --.  Backwards-compatibility is maintained
    by using getopt's `-a` option.  (Closes: #532061)
  * added `-p` and `-f` as short options for `--package-only` and `--filename-only`
  * improved `dlocate -k`, and sorted output.
  * added support for `+` characters in package names for 'dlocate -s'
  * fixed `--lsbin` to use `stat -c '%A %n'` rather than `ls -lLd`
  * added support for virtual packages in `-s` (Closes: #407412)
  * warnings and errors now go to stderr (Closes: #532704)
  * added note about update-dlocatedb to man page (Closes: #563595, #567080)
  * `dlocate -l` shows more of the package names (Closes: #614664)
  * added full path to error messages mentioning the .list file (Closes: #733864)
  * added --lsdir option to list directories (Closes: #788661)
  * update-dlocatedb now updates `dlocate -l` info (Closes: #567080)  
  * now being maintained on github https://github.com/craig-sanders/dlocate
    forks and pull requests welcome.
